content/boundary/v0.21.x/content/docs/targets/create/tcp/kubernetes.mdx
---
layout: docs
page_title: Create a Kubernetes TCP target
description: >-
  Learn how to create a Kubernetes TCP target.
---

# Create a Kubernetes TCP target

TCP targets provide a generic way to connect to any service Boundary has access to, including Kubernetes API servers.

The following examples use a direct target address for simplicity, but HashiCorp recommends that you [configure host catalogs and host sets](/boundary/docs/hosts/create-static-host-catalog) for scaled production deployments.

Complete the following steps to create a TCP target for a Kubernetes API server.

<Tabs>
<Tab heading="Admin Console" group="admin">

1. Log in to Boundary.
1. Select an org, and then select the project where you want to create a target.
1. Select **Targets** under *Project Actions*.
1. Click **New Target**.
1. Complete the following fields:
   - **Name**: (Required) A name for identification purposes, such as `kubernetes`.
   The name must be unique.
   - **Description**: (Optional) An optional description of the target for identification purposes.
   - **Type**: (Required) Select **TCP** to create an TCP target.
   - **Target Address** (Optional) If you are not using host catalogs and host sets, you can enter a target address instead to map the target to a single address.
   This must be a valid IP address or DNS name.
   - **Default Port** (Required) The default port on which to connect, such as `6443` for an HTTPS TCP connection.
   - **Aliases** (Optional) A globally-scoped unique identifier for the target, which makes the target easier to connect to using the CLI or transparent sessions. If you create an alias, click **Add** to assign it.
1. Click **Save**.

</Tab>
<Tab heading="CLI" group="cli">

1. Log in to Boundary.
1. Set the `BOUNDARY_PROJECT_ID` environment variable, or provide the scope ID (such as `p_1234567890`) in the next step.
1. Use the following command to create a TCP target named `kubernetes` with a direct target address of `10.0.0.100` and a default connection port of `6443`:

   ```shell-session
   $ boundary targets create tcp \
     -scope-id $BOUNDARY_PROJECT_ID \
     -name "kubernetes" \
     -address "10.0.0.100" \
     -default-port 6443
   ```

  You must provide the `scope-id` field when you create a static host catalog.

  Refer to the [targets](/boundary/docs/domain-model/targets) domain model documentation for more fields that you can use when you create targets, and the [`targets create`](/boundary/docs/commands/targets/create) command for all the CLI options.

</Tab>
<Tab heading="Terraform" group="terraform">

You can define a target and target alias using the [Boundary Terraform provider](https://registry.terraform.io/providers/hashicorp/boundary/latest):

```hcl
resource "boundary_target" "kubernetes_api" {
  name         = "kubernetes"
  description  = "Kubernetes API server target"
  type         = "tcp"
  address      = "10.0.0.100"
  default_port = "6443"
  scope_id     = boundary_scope.project.id
}
```

</Tab>
</Tabs>

## Configure a brokered application credential

You can configure targets with a brokered application credential for end users to connect to the target.

<Note>

  You can configure TCP targets with [credential brokering](/boundary/docs/credentials/configure-credential-brokering), but not [credential injection](/boundary/docs/credentials/configure-credential-injection).

</Note>

You can configure credentials for the TCP target using:

- Static credentials (`username_password`)
- Vault credential library (username/password)

Refer to the [Configure targets with credential brokering](/boundary/docs/credentials/configure-credential-brokering) page to learn how to configure a target with credential brokering.

## Next steps

To learn how to connect to a target, refer to [Connection workflows](/boundary/docs/targets/connections).

To use target aliases to connect to targets:

1. [Create a target alias](/boundary/docs/targets/configuration/create-target-alias)
1. [Connect to a target using an alias](/boundary/docs/targets/connections/connect-target-alias)
1. After you set up a target alias, you can optionally [Configure transparent sessions for end users](/boundary/docs/targets/configuration/configure-transparent-sessions). <sup>HCP/ENT</sup>